# kuntaparse

./: .gitignore  ARCHITECTURE.md  INSTALL_POPPLER.md  KÄYTTÖOHJE.md  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt  test_comprehensive.py
Kunta-analyysi/: Kunta_analyysi_Lapua_Seinajoki_Kauhava_2024.md  Kunta_analyysi_Lapua_Seinajoki_Kauhava_2024_readable.md  Kunta_analyysi_Lapua_Seinajoki_Kauhava_2024_story.md  generate_chart.py
data/: .gitkeep  README.md
src/: __init__.py  cli.py  comprehensive_table_parser.py  config.py  docling_parser.py  html_table.py  marker_parser.py  mineru_parser.py  ocr_dedup.py  paddle_device.py  pdfplumber_parser.py  pipeline.py  ppstructure_postprocess.py  pymupdf_prepass.py  quick_check.py  repair_tables.py  table_fixer.py  table_image_builder.py  table_utils.py  text_cleanup.py  validate_financials.py  validation.py
tests/: __init__.py  test_docling_parser.py  test_marker_parser.py  test_ocr_dedup.py  test_parser.py  test_pipeline.py  test_repair_tables.py
tmp/: plan.md
